# MiniMem

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  main.py  pyproject.toml  skills-lock.json  start_flockmem.bat  start_minimem.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  (+1 more)
.tmp-qa-gate-config/: config.json
docs/: api-reference.md  eval_sample.jsonl  locomo-evaluation.md  locomo_eval_sample.jsonl  locomo_raw_sample.json
scripts/: eval_retrieval_optimizations.py  install.ps1  install.sh  smoke_collective.ps1  smoke_collective_release.ps1  smoke_collective_release.sh  start.ps1  start.sh  validate_collective_release.ps1
tests/: conftest.py  test_agentic_verifier.py  test_chat_model_rerank_provider.py  test_chat_responder.py  test_collective_acl_boundary.py  test_collective_core_smoke.py  test_collective_envelope_passthrough.py  test_collective_error_recovery.py  test_collective_gate_checks.py  test_collective_gate_matrix.py  test_collective_gate_smoke.py  test_collective_integration_envelope.py  test_collective_routes.py  test_collective_scope_acl_boundaries.py  test_config_json_repository.py  test_config_raw_route.py  test_embedding_factory.py  test_event_log_retrieval_channels.py  test_event_log_vector_wiring.py  test_flockmem_mcp_server.py  test_foresight_interval.py  test_graph_recall_gate.py  test_graph_store.py  test_http_auth.py  test_ingest_skill_adapter_schema.py  test_keyword_search_repository.py  test_lancedb_store.py  test_memcell_eventlog_pipeline.py  test_memory_category_assignment.py  test_memory_route_payload.py  test_memory_route_policy.py  test_memory_service_alignment_guards.py  test_memory_service_memorize_encoding.py  test_memory_service_semantic_latency.py  test_minimal_integration.py  test_minimem_mcp_server.py  test_model_config_route.py  test_openai_embedding_provider.py  test_openai_rerank_provider.py  test_openclaw_collective_contract_static.py  (+14 more)
tmp/: retest_runtime_subagent.py  retest_runtime_subagent_result.json
tools/: _tmp_run_collective_bench.py  backtest_simple_recall.py  bench_collective_perf.py  benchmark_collective_baseline.py  benchmark_memory.py  prepare_locomo_eval.py  run_locomo_eval.py  run_skill_ablation_eval.py
(+125 files in other folders)
