[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimem-agent"
version = "0.1.3"
description = "Lightweight long-term memory system for local/edge AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "anyio>=4.0.0",
  "lancedb>=0.29.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "fastmcp>=2.0.0",
]

[project.scripts]
minimem = "evermemos_lite.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
evermemos_lite = ["ui/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
