[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flockmem"
version = "0.1.4"
description = "Lightweight long-term memory system for local/edge AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "anyio>=4.0.0",
  "lancedb>=0.29.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "fastmcp>=2.0.0",
]

[project.scripts]
flockmem = "flockmem.cli:main"
minimem = "flockmem.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flockmem = ["ui/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

